changed request with node-fetch, reduced response headers

--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
   "homepage": "https://github.com/simonemarra/httpRequestsProxyNodejs#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "request": "^2.88.2"
+    "node-fetch": "^2.6.1"
   }
 }
